--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.16.4",
     "postcss": "^8.4.20",
